maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:50: error: Unmatched closing brace '}' ignored here
}
^